--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="celsius_value">Celsius Value</string>
     <string name="convert">Convert!</string>
     <string name="degrees_fahrenheit">%1$.2f°f</string>
+    <string name="degrees_celsius">%1$.2f°c</string>
     <string name="fahrenheit_to_celsius_converter">Fahrenheit to Celsius Converter</string>
+    <string name="fahrenheit_value">Fahrenheit Value</string>
+    <string name="convertF">Convert!</string>
 </resources>
